--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "mongodb": "^6.2.0",
